# ai-powerbi-report-generator

./: .gitignore  PROJECT_BRIEF.md  README.md  pyproject.toml
src/pbigen/: __init__.py  api.py  cli.py  dax.py  layout.py  planner.py  schema_source.py  spec.py  validator.py
src/pbigen/emit/: __init__.py  pbip.py  tmdl.py
tests/: test_api_cli.py  test_llm_planner.py  test_planner.py  test_validation_and_emit.py
